basic initial settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ProgettoBE-U2-W3-D5-GestioneEventi
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/GestioneEventi
+spring.datasource.url = jdbc:postgresql://localhost:5432/gestione_eventi
 spring.datasource.username = postgres
 spring.datasource.password = root
 spring.datasource.driver-class-name = org.postgresql.Driver
